--- a/build.gradle
+++ b/build.gradle
@@ -198,7 +198,7 @@ subprojects { subproject ->
 			subethasmtpVersion = '1.2'
 			slf4jVersion = '1.7.11'
 			springIntegrationVersion = '4.3.0.RELEASE'
-			springIntegrationDslVersion = '1.1.2.RELEASE'
+			springIntegrationDslVersion = '1.2.0.M1'
 			springIntegrationKafkaVersion = '2.0.0.RELEASE'
 			springIntegrationSplunkVersion = '1.1.0.RELEASE'
 			springKafkaVersion = '1.0.1.RELEASE'
@@ -1335,6 +1335,36 @@ project('stomp-chat') {
 
 	springBoot {
 		mainClass = 'org.springframework.integration.samples.chat.stomp.server.Application'
+	}
+
+	tasks.withType(JavaExec) {
+		standardInput = System.in
+	}
+}
+
+project('kafka-dsl') {
+	description = 'Java DSL Kafka Sample'
+
+	apply plugin: 'spring-boot'
+
+	sourceCompatibility = 1.8
+
+	dependencies {
+		compile 'org.springframework.boot:spring-boot-starter-integration'
+		compile "org.springframework.integration:spring-integration-java-dsl:$springIntegrationDslVersion"
+		compile "org.springframework.kafka:spring-kafka:$springKafkaVersion"
+		compile ("org.springframework.kafka:spring-kafka-test:$springKafkaVersion") {
+			exclude group: 'org.slf4j'
+		}
+		testCompile 'org.springframework.boot:spring-boot-starter-test'
+	}
+	springBoot {
+		mainClass = 'org.springframework.integration.samples.dsl.kafka.Application'
+	}
+
+	task run(type: JavaExec) {
+		main 'org.springframework.integration.samples.dsl.kafka.Application'
+		classpath = sourceSets.main.runtimeClasspath
 	}
 
 	tasks.withType(JavaExec) {
