--- a/dsl/cafe-dsl/pom.xml
+++ b/dsl/cafe-dsl/pom.xml
@@ -83,7 +83,7 @@
     <dependency>
       <groupId>org.springframework.integration</groupId>
       <artifactId>spring-integration-java-dsl</artifactId>
-      <version>1.1.2.RELEASE</version>
+      <version>1.2.0.M1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
