--- a/dsl/kafka-dsl/pom.xml
+++ b/dsl/kafka-dsl/pom.xml
@@ -7,10 +7,10 @@
     <version>1.4.0.RC1</version>
   </parent>
   <groupId>org.springframework.integration.samples</groupId>
-  <artifactId>si4demo</artifactId>
+  <artifactId>kafka-dsl</artifactId>
   <version>4.3.0.BUILD-SNAPSHOT</version>
-  <name>Java Configuration/DSL Sample</name>
-  <description>Java Configuration/DSL Sample</description>
+  <name>Java DSL Kafka Sample</name>
+  <description>Java DSL Kafka Sample</description>
   <url>http://projects.spring.io/spring-integration</url>
   <organization>
     <name>SpringIO</name>
@@ -59,32 +59,7 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-integration</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.integration</groupId>
-      <artifactId>spring-integration-mail</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.integration</groupId>
-      <artifactId>spring-integration-twitter</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.integration</groupId>
-      <artifactId>spring-integration-http</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.integration</groupId>
-      <artifactId>spring-integration-ip</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -94,21 +69,15 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>javax.mail</groupId>
-      <artifactId>javax.mail-api</artifactId>
-      <version>1.5.5</version>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+      <version>1.0.1.RELEASE</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>com.sun.mail</groupId>
-      <artifactId>javax.mail</artifactId>
-      <version>1.5.5</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.rometools</groupId>
-      <artifactId>rome</artifactId>
-      <version>1.5.0</version>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka-test</artifactId>
+      <version>1.0.1.RELEASE</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
