--- a/build.gradle
+++ b/build.gradle
@@ -196,12 +196,12 @@ subprojects { subproject ->
 			postgresVersion = '9.1-901-1.jdbc4'
 			subethasmtpVersion = '1.2'
 			slf4jVersion = '1.7.11'
-			springIntegrationVersion = '4.3.1.BUILD-SNAPSHOT'
+			springIntegrationVersion = '4.3.1.RELEASE'
 			springIntegrationDslVersion = '1.2.0.M1'
 			springIntegrationKafkaVersion = '2.0.0.RELEASE'
 			springIntegrationSplunkVersion = '1.1.0.RELEASE'
 			springKafkaVersion = '1.0.2.RELEASE'
-			springVersion = '4.3.0.RELEASE'
+			springVersion = '4.3.1.RELEASE'
 			springSecurityVersion = '4.0.2.RELEASE'
 			springWebFlowVersion = '2.3.3.RELEASE'
 			tilesJspVersion = '2.2.1'
